feat: add user role management and product feature tests
- Updated package.json to include Cucumber and Chai for testing.
- Modified app.module.ts to include Usuario entity in TypeORM configuration.
- Adjusted auth.module.ts to properly register Usuario repository.
- Enhanced auth.service.ts to check for existing usernames during registration.
- Refactored roles.guard.ts to use the new Role enum.
- Expanded productos.controller.spec.ts with comprehensive tests for product management.
- Updated productos.controller.ts to enforce role-based access control.
- Revised usuario.entity.ts to use the new Role enum for user roles.
- Created roles.decorator.ts to define custom roles metadata.
- Renamed roles.enum.ts to use singular Role for clarity and added CLIENT role.
- Added Cucumber feature file for product management scenarios.
- Implemented step definitions for product management tests using Cucumber.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@cucumber/cucumber": "^11.3.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
@@ -45,13 +46,18 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^5.0.2",
+    "@types/chai": "^5.2.2",
+    "@types/cucumber": "^6.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "axios": "^1.10.0",
+    "chai": "^5.2.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -64,7 +70,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
