--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -3,15 +3,20 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
+  # Prometheus mismo
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
 
+  # Backend NodeJS
   - job_name: 'backend'
     metrics_path: /metrics
     static_configs:
       - targets: ['backend:4000']
+        labels:
+          instance: 'backend:4000'  # ✅ correcto, clave: valor
 
+  # PostgreSQL exporter
   - job_name: 'postgres_exporter'
     static_configs:
       - targets: ['postgres-exporter:9187']
