--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -18,7 +19,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:cucumber": "cucumber-js"
+    "test:cucumber": "cucumber-js",
+    "stress-test": "powershell -Command \"artillery run artillery/nestjs-stress-test.yml --output artillery/results/stress-test-$(Get-Date -Format 'yyyyMMdd-HHmmss').json\"",
+    "stress-test:generate-data": "node artillery/scripts/generate-test-data.js",
+    "stress-test:report": "node artillery/scripts/generate-html-report.js",
+    "stress-test:quick": "artillery run artillery/nestjs-stress-test.yml --overrides '{\"config\": {\"phases\": [{\"duration\": 30, \"arrivalRate\": 10}]}}'",
+    "stress-test:ci": "artillery run artillery/nestjs-stress-test.yml --environment production"
   },
   "dependencies": {
     "@cucumber/cucumber": "^11.3.0",
@@ -35,6 +41,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "faker": "^5.5.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -47,6 +54,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^10.0.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
@@ -62,6 +70,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "artillery": "^2.0.25",
+    "artillery-plugin-html-report": "^2.0.0",
     "axios": "^1.10.0",
     "chai": "^4.3.10",
     "eslint": "^9.18.0",
@@ -69,6 +79,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "open": "^10.2.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
