--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -17,9 +16,9 @@
     "test": "jest --config jest.config.ts",
     "test:watch": "jest --watch --config jest.config.ts",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:cucumber": "cucumber-js",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "test:cucumber": "cross-env NODE_ENV=test cucumber-js",
     "stress-test": "powershell -Command \"artillery run artillery/nestjs-stress-test.yml --output artillery/results/stress-test-$(Get-Date -Format 'yyyyMMdd-HHmmss').json\"",
     "stress-test:generate-data": "node artillery/scripts/generate-test-data.js",
     "stress-test:report": "node artillery/scripts/generate-html-report.js",
