renombrando carpeta para github actions correctamente

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: tu-usuario-docker/inventario-nestjs:latest # <-- ¡Cambia esto!
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/inventario-nestjs:latest
 
       - name: Deploy to production environment
         run: |
