--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Linter
-        run: npm run lint
+      # - name: Run Linter
+      #   run: npm run lint
 
       - name: Build application
         run: npm run build --if-present
