--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.16.2",
+    "pg": "8.11.3",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -73,6 +73,7 @@
     "artillery-plugin-html-report": "^2.0.0",
     "axios": "^1.10.0",
     "chai": "^4.3.10",
+    "cross-env": "^10.1.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
