--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - DB_PASSWORD=admin
       - DB_DATABASE=inventory
       - PORT=4000
+    env_file:
+      - .env
     depends_on:
       - postgres
       - postgres-exporter
